# shoptalk-ai

./: .dockerignore  .gitignore  README.md  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.txt  start.sh  test.py
.github/workflows/: deploy.yml
agents/shopping_agent/: __init__.py  agent.py
docker/: Dockerfile
docs/: index.html
model/mobileclip2_lora/: adapter_config.json
scripts/: embeddings.py  embeddings_gpu.py  shards_tar.py
tools/: product_search.py
train/: conversion_script.py  finetune.py  finetune_mobileclip2_lora_gpu_optimized.py  prepare_training_data.py  sagemaker_metadata_refinement.py
utils/: database.py
